--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,6 +37,9 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="https://forms.gle/V9KX3jwmoUfBFnhP7">Register</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
